...
                                                color: Colors.grey)
                                            : Icon(Icons.shopping_bag_outlined,
                                                color: Colors.white),
                                        label: Text(
                                          hasRequested
                                              ? 'Request Sent'
                                              : 'Request Donation',
                                          style: TextStyle(
                                            color: hasRequested
                                                ? Colors.grey
                                                : Colors.white,
                                          ),
                                        ),
...
