...
    final Color cardColor = theme.cardColor;
    final Color containerBgColor = isDarkMode ? theme.cardColor : Colors.white;

    return Scaffold(
      appBar: AppBar(
      title: Text(
        'Shopping List',
        style: TextStyle(
        fontSize: 20,
        fontWeight: FontWeight.bold,
        letterSpacing: 1.2,
        color: theme.appBarTheme.titleTextStyle?.color ?? Colors.white,
        ),
...
                                      color: item['isPurchased'] 
                                        ? (isDarkMode ? Colors.green[900] : Colors.green[50])
                                        : (isDarkMode ? Colors.grey[800] : Colors.grey[200]),
                                      borderRadius: BorderRadius.circular(10),
                                    ),
                                    child: Text(
                                      item['isPurchased'] ? 'Purchased' : 'To buy',
                                      style: TextStyle(
                                        fontSize: 12,
                                        color: item['isPurchased'] 
                                          ? (isDarkMode ? Colors.green[300] : Colors.green) 
                                          : (isDarkMode ? Colors.grey[400] : Colors.grey[600]),
                                      ),
...
