...
        }
      },
      itemBuilder: (BuildContext context) => [
        _buildMenuItem('edit', Icons.edit, 'Edit'),
        _buildMenuItem('delete', Icons.delete, 'Delete'),
        _buildMenuItem('donate', Icons.volunteer_activism, 'Donate'),
        _buildMenuItem('Add to Shopping List', Icons.shopping_cart, '+ Shopping List'),
      ],
    );
  }

  PopupMenuItem<String> _buildMenuItem(String value, IconData icon, String label) {
    return PopupMenuItem<String>(
...
